// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test find contact query should find a contact given their email 1`] = `
Object {
  "data": Object {
    "findContact": Object {
      "email": "humam@company.com",
      "name": "Humam Abo Alraja",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test find contact query should not find a contact if no arguments are passed in 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Contact.name.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test find contact query should not find a user by email if it does not exist 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Contact.name.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
